Fix overflow of skills article cause of margin-bottom PHP skill

--- a/css/main.css
+++ b/css/main.css
@@ -274,10 +274,6 @@ section.not-found {
 		padding: 0px 0px 150px 0px;
 	}
 	
-	.skill img.php {
-		margin-bottom: -50px;
-	}
-	
 	.skill ul, .portfolio-list ul, .my-contact ul {
 		margin: 0px;
 	}
